feat: logo icon and logo components

--- a/apps/client/src/app/pages/component-playground/component-playground.component.html
+++ b/apps/client/src/app/pages/component-playground/component-playground.component.html
@@ -1,14 +1,7 @@
 <p>component-playground works!</p>
 
-<button 
-  mButton 
-  severity="success" 
-  appearance="filled"
-  size="large"
->
+<button mButton severity="success" appearance="filled" size="large">
   Test
 </button>
-<m-button severity="primary">Iniciar sesión</m-button>
-<m-button severity="success" appearance="outlined" size="large">Iniciar sesión</m-button>
 
 <button class="custom" mButton size="large">Test</button>
