--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -1,10 +1,6 @@
 @import url("./app/core/styles/reset.css") layer(reset);
 @import url("./app/core/styles/colors.css");
-
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pixelify+Sans:wght@400..700&display=swap");
-
-/* Directives */
-@import "./app/shared/components/button/button.component.css";
 
 /* TODO: add missing variables from project's Figma */
 :root {
@@ -16,5 +12,5 @@
 	--radius-xl: 4rem;
 	--radius-full: 100%;
 
-	font-family: "Inter", sans-serif;
+	font-family: Inter, sans-serif;
 }
