--- a/apps/client/src/app/core/styles/colors.css
+++ b/apps/client/src/app/core/styles/colors.css
@@ -1,18 +1,5 @@
-/* TODO: add missing colors from project's Figma */
+/* TODO: change colors to new branding (see Figma) */
 :root {
-	/* Primary color */
-	--primary-50: #fff1f4;
-	--primary-100: #ffe3e9;
-	--primary-200: #ffcbd9;
-	--primary-300: #ffa1b9;
-	--primary-400: #ff6d94;
-	--primary-500: #f92564;
-	--primary-600: #e7175f;
-	--primary-700: #c30d50;
-	--primary-800: #a30e4a;
-	--primary-900: #8c0f46;
-	--primary-950: #4e0321;
-
 	/* Status colors */
 	--success: #49af41;
 	--warning: #ffe16a;
@@ -24,24 +11,24 @@
 	/* Background color */
 	--background-color: #fcf6ef;
 
-	/* Added */
-	--primary-color-subtle: #feebf1;
-	--primary-color-lighter: #fb7ea4;
-	--primary-color: #f92564;
-	--primary-color-darker: #a90536;
+	/* Branding colors */
+	--primary-subtle: #feebf1;
+	--primary-lighter: #fb7ea4;
+	--primary: #f92564;
+	--primary-darker: #a90536;
 
-	--secondary-color-subtle: #d9dff5;
-	--secondary-color-lighter: #254bd4;
-	--secondary-color: #0c1844;
-	--secondary-color-darker: #070e27;
+	--secondary-subtle: #d9dff5;
+	--secondary-lighter: #254bd4;
+	--secondary: #0c1844;
+	--secondary-darker: #070e27;
 
-	--tertiary-color-subtle: #ede5f2;
-	--tertiary-color-lighter: #b286d0;
-	--tertiary-color: #7d40a5;
-	--tertiary-color-darker: #4b2663;
+	--tertiary-subtle: #ede5f2;
+	--tertiary-lighter: #b286d0;
+	--tertiary: #7d40a5;
+	--tertiary-darker: #4b2663;
 
-	--contrast-color-subtle: #ffffff;
-	--contrast-color-lighter: #fdfaf6;
-	--contrast-color: #fcf6ef;
-	--contrast-color-darker: #dd994b;
+	--contrast-subtle: #ffffff;
+	--contrast-lighter: #fdfaf6;
+	--contrast: #fcf6ef;
+	--contrast-darker: #dd994b;
 }
