--- a/apps/client/src/app/pages/auth/login/login.component.css
+++ b/apps/client/src/app/pages/auth/login/login.component.css
@@ -1,8 +1,20 @@
 :host {
+	/* display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center; */
+	height: 100dvh;
+	/* background-color: var(--contrast-color); */
+}
+
+.container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100dvh;
-	background-color: var(--contrast-color);
+}
+
+.horizontal-center {
+	display: flex;
+	justify-content: center;
 }
