--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -1,1 +1,105 @@
-<p>register works!</p>
+<header>
+  <p>MOVIC</p>
+  <h4>Ingrese los datos</h4>
+</header>
+
+<section>
+  <form action="" class="container">
+
+    <div class="input-container">
+      <label for="profilePhoto">Subir foto de perfil</label>
+      <input
+        type="file"
+        name="profilePhoto"
+        id="profilePhoto"
+        accept="image/png,image/jpg,image/jpeg"
+      />
+    </div>
+
+    <div class="input-container">
+      <label for="name">Nombre</label>
+      <input
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Ingrese el nombre"
+        required
+      />
+    </div>
+
+    <div class="input-container">
+      <label for="lastname">Apellido</label>
+      <input
+        type="text"
+        name="lastName"
+        id="lastName"
+        placeholder="Ingrese el apellido"
+        required
+      />
+    </div>
+
+    <fieldset>
+      <legend>Sexo</legend>
+      <div>
+        <input
+          type="radio"
+          name="gender"
+          id="genderChoiceFemale"
+          value="female"
+          required
+        />
+        <label for="genderChoiceFemale">Femenino</label>
+      </div>
+
+      <div class="input-container">
+        <input
+          type="radio"
+          name="gender"
+          id="genderChoiceMale"
+          value="male"
+          required
+        />
+        <label for="genderChoiceMale">Masculino</label>
+      </div>
+    </fieldset>
+
+    <div class="input-container">
+      <label for="email">Correo Electrónico</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        value="mariapforero2003@gmail.com"
+        disabled
+      />
+    </div>
+
+    <div class="input-container">
+      <label for="password">Contraseña</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="Ingrese la contraseña"
+        required
+      />
+    </div>
+
+    <div class="input-container">
+      <label for="confirmPassword">Confirmar Contraseña</label>
+      <input
+        type="password"
+        name="confirmPassword"
+        id="confirmPassword"
+        placeholder="Ingrese la contraseña nuevamente"
+        required
+      />
+    </div>
+    
+    <div class="input-container">
+      <label for="type">Tipo</label>
+      <input type="text" name="type" id="type" value="Estudiante" disabled />
+    </div>
+    <button type="submit">Registrarme</button>
+  </form>
+</section>
