--- a/apps/client/src/app/pages/auth/auth.component.html
+++ b/apps/client/src/app/pages/auth/auth.component.html
@@ -3,6 +3,6 @@
 <ng-lottie [options]="options" width="15rem" />
 
 <div class="options-container">
-  <button mButton severity="primary" appearance="filled" size="large" (click)="goToLogin()">Iniciar sesión</button>
-  <button mButton (click)="goToRegister()">Registrarse</button>
+	<button mButton severity="contrast" appearance="filled" size="large" (click)="goToLogin()">Iniciar sesión</button>
+	<button mButton severity="transparent" size="large" (click)="goToRegister()">Registrarse</button>
 </div>
