--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -1,6 +1,7 @@
 @import url("./app/core/styles/reset.css") layer(reset);
 @import url("./app/core/styles/colors.css");
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pixelify+Sans:wght@400..700&display=swap");
+@import url("./app/core/styles/typography.css");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 /* TODO: add missing variables from project's Figma */
 :root {
@@ -12,5 +13,5 @@
 	--radius-xl: 4rem;
 	--radius-full: 100%;
 
-	font-family: Inter, sans-serif;
+	font-family: Roboto, sans-serif;
 }
