feat: add disabled style in inputText component

--- a/apps/client/src/app/shared/ui/components/inputText/inputText.component.html
+++ b/apps/client/src/app/shared/ui/components/inputText/inputText.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-	<label for="name" class="label-large">Nombre</label>
-	<input type="text" name="name" id="name" placeholder="Ingrese el nombre" required value="Maria Paula" />
+	<input type="text" id="name" placeholder="Ingrese el nombre" value="Maria Paula Forero" disabled />
+	<label for="name" class="label">Nombre</label>
 </div>
