--- a/apps/client/src/app/shared/ui/components/inputText/inputText.component.css
+++ b/apps/client/src/app/shared/ui/components/inputText/inputText.component.css
@@ -1,9 +1,6 @@
-* {
-	color: var(--primary-text-value);
-}
 .container {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	gap: 0.125rem;
 }
 
@@ -12,27 +9,33 @@ label {
 }
 
 input {
-	height: 49px;
-	width: 338px;
+	height: 3.063rem;
+	width: 21.125rem;
+	background-color: var(--contrast-surface-subtle);
+	color: var(--primary-text-value);
 	border: 0.125rem solid var(--contrast-border-subtle);
 	border-radius: 0.625rem;
-	background-color: var(--contrast-surface-subtle);
 	outline: none;
-	padding-left: 0.8rem;
+	padding: 0 0.8rem;
 }
 
 input::placeholder {
-	font-size: 1.125rem;
+	font-size: 1rem;
 	font-weight: 400;
-	line-height: 1.5rem;
+	line-height: 1.25rem;
 	color: var(--primary-text-placeholder);
 }
 
 input:disabled {
 	background-color: var(--greyscale-surface-disabled);
+	color: #878eaa;
 	border: none;
 }
 
 input:disabled::placeholder {
 	color: #878eaa;
+}
+
+input:disabled + label {
+	color: #969bac;
 }
