--- a/apps/client/src/app/shared/ui/components/text-input/text-input.component.html
+++ b/apps/client/src/app/shared/ui/components/text-input/text-input.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-	<input type="text" id="name" placeholder="Ingrese el nombre" value="Maria Paula Forero" [disabled]="disabled" />
-	<label for="name" class="label">Nombre</label>
+	<input type="text" [id]="inputId" [formControl]="control" [placeholder]="placeholder" [disabled]="disabled" />
+	<label [for]="inputId" class="label">{{ label }}</label>
 </div>
