fix: disabled input styles

--- a/apps/client/src/app/shared/ui/components/text-input/text-input.component.css
+++ b/apps/client/src/app/shared/ui/components/text-input/text-input.component.css
@@ -36,17 +36,17 @@ input::placeholder {
 	color: var(--primary-text-placeholder);
 }
 
-input:disabled {
+input.disabled {
 	background-color: var(--greyscale-surface-disabled);
 	color: #878eaa;
 	border: none;
 }
 
-input:disabled::placeholder {
+input.disabled::placeholder {
 	color: #878eaa;
 }
 
-input:disabled + label {
+.disabled-label {
 	color: #969bac;
 }
 
