feat: email verification page

--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -12,7 +12,7 @@
 		</div> -->
 
 		<div>
-			<text-input [disabled]="true" />
+			<text-input inputId="test" />
 		</div>
 
 		<!-- <div class="input-container">
