--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -4,55 +4,46 @@
 </header>
 
 <section>
-	<form action="" class="container">
+	<form class="container">
 
-		<!-- <div class="input-container">
+		<div class="input-container">
 			<label for="profilePhoto">Subir foto de perfil</label>
 			<input type="file" name="profilePhoto" id="profilePhoto" accept="image/png,image/jpg,image/jpeg" />
-		</div> -->
-
-		<div>
-			<text-input inputId="test" />
 		</div>
 
-		<!-- <div class="input-container">
-			<label for="lastname">Apellido</label>
-			<input type="text" name="lastName" id="lastName" placeholder="Ingrese el apellido" required />
-		</div>
+		<text-input inputId="name" label="Nombre" placeholder="Ingrese el nombre"
+			[control]="registerForm.controls.name" />
+		<text-input inputId="lastName" label="Apellido" placeholder="Ingrese el apellido"
+			[control]="registerForm.controls.lastName" />
 
 		<fieldset>
 			<legend>Sexo</legend>
 			<div>
-				<input type="radio" name="gender" id="genderChoiceFemale" value="female" required />
+				<input type="radio" name="gender" id="genderChoiceFemale" value="female" />
 				<label for="genderChoiceFemale">Femenino</label>
 			</div>
 
 			<div class="input-container">
-				<input type="radio" name="gender" id="genderChoiceMale" value="male" required />
+				<input type="radio" name="gender" id="genderChoiceMale" value="male" />
 				<label for="genderChoiceMale">Masculino</label>
 			</div>
 		</fieldset>
 
-		<div class="input-container">
-			<label for="email">Correo Electrónico</label>
-			<input type="email" name="email" id="email" value="mariapforero2003@gmail.com" disabled />
-		</div>
+		<text-input inputId="email" label="Correo Electrónico" placeholder="Ingrese el correo electrónico"
+			[control]="registerForm.controls.email" />
 
-		<div class="input-container">
-			<label for="password">Contraseña</label>
-			<input type="password" name="password" id="password" placeholder="Ingrese la contraseña" required />
-		</div>
+		<password-input inputId="password" label="Contraseña" placeholder="Ingrese la contraseña"
+			[control]="registerForm.controls.password" />
 
-		<div class="input-container">
-			<label for="confirmPassword">Confirmar Contraseña</label>
-			<input type="password" name="confirmPassword" id="confirmPassword"
-				placeholder="Ingrese la contraseña nuevamente" required />
-		</div>
+		<password-input inputId="confirmPassword" label="Confirmar contraseña"
+			placeholder="Ingrese la contraseña nuevamente" [control]="registerForm.controls.confirmPassword" />
 
-		<div class="input-container">
-			<label for="type">Tipo</label>
-			<input type="text" name="type" id="type" value="Estudiante" disabled />
-		</div> -->
-		<button type="submit">Registrarme</button>
+
+		<text-input inputId="type" label="Tipo" [control]="registerForm.controls.type" />
+
+		<button mButton severity="secondary" size="large" (click)="handleSubmit()"
+			[disabled]="this.registerForm.invalid">Registrarme</button>
+
 	</form>
+
 </section>
