--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -3,7 +3,6 @@
 @import url("./app/core/styles/typography.css");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-/* TODO: add missing variables from project's Figma */
 :root {
 	/* Border Radius */
 	--radius-xs: 0.25rem;
@@ -12,6 +11,21 @@
 	--radius-lg: 2.25rem;
 	--radius-xl: 4rem;
 	--radius-full: 100%;
+
+	/* Icons */
+	--icon-xs: 1rem;
+	--icon-s: 1.125rem;
+	--icon-m: 1.5rem;
+	--icon-l: 1.938rem;
+	--icon-xl: 3rem;
+	--icon-xxl: 4rem;
+
+	/* Avatar */
+	--avatar-xs: 1.5rem;
+	--avatar-s: 2.25px;
+	--avatar-s: 3rem;
+	--avatar-l: 4rem;
+	--avatar-xl: 5rem;
 
 	font-family: Roboto, sans-serif;
 }
