fix: add formControl property in input for password input component

--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
@@ -54,6 +54,6 @@ label {
 }
 
 /* TODO: use semantic color here */
-.input-container input.error {
+.input-container.error {
 	border-color: var(--error-500);
 }
