--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
@@ -1,7 +1,8 @@
 <div class="container">
 	<label [for]="inputId" class="label-medium">{{label}}</label>
-	<div class="input-container">
-		<input [type]="showPassword ? 'text' : 'password'" [id]="inputId" [placeholder]="placeholder" />
+	<div class="input-container" [class.error]="isInvalid">
+		<input [type]="showPassword ? 'text' : 'password'" [id]="inputId" [placeholder]="placeholder"
+			[formControl]="control" />
 		<div (click)="handlePasswordVisibility()" style="cursor: pointer;">
 
 			@if(showPassword){
