--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -1,6 +1,6 @@
-<header>
-	<p>MOVIC</p>
-	<h4>Ingrese los datos</h4>
+<header class="header-container">
+	<brand-logo class="logo" size="small" />
+	<h4 class="heading-xsmall">Ingrese los datos</h4>
 </header>
 
 <section>
