--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -17,18 +17,13 @@
 		<text-input inputId="lastName" label="Apellido" placeholder="Ingrese el apellido"
 			[control]="registerFormGroup.controls.lastName" />
 
-		<fieldset>
-			<legend>Sexo</legend>
-			<div>
-				<input type="radio" name="gender" formControlName="gender" id="genderChoiceFemale" value="female" />
-				<label for="genderChoiceFemale">Femenino</label>
-			</div>
 
-			<div class="input-container">
-				<input type="radio" name="gender" formControlName="gender" id="genderChoiceMale" value="male" />
-				<label for="genderChoiceMale">Masculino</label>
-			</div>
-		</fieldset>
+		<radio-button />
+
+		<!-- <div class="input-container">
+			<input type="radio" name="gender" formControlName="gender" id="genderChoiceMale" value="male" />
+			<label for="genderChoiceMale">Masculino</label>
+		</div> -->
 
 		<text-input inputId="email" label="Correo Electrónico" placeholder="Ingrese el correo electrónico"
 			[control]="registerFormGroup.controls.email" />
