feat: add inputs decorators in radio button component

--- a/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.css
+++ b/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.css
@@ -5,11 +5,11 @@
 	gap: 0.4rem;
 }
 
+label {
+	color: var(--primary-text-label);
+}
+
 input {
 	width: 1.2rem;
 	height: 1.2rem;
-}
-
-input:checked {
-	color: red;
 }
