--- a/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.html
+++ b/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.html
@@ -1,4 +1,4 @@
 <div class="input-container">
-	<label for="genderChoiceFemale" class="label-large">Femenino</label>
-	<input type="radio" name="gender" formControlName="gender" id="genderChoiceFemale" value="female" />
+	<label [for]="inputId" class="label-large">{{label}}</label>
+	<input class="label-large" type="radio" [formControl]="control" [id]="inputId" [value]="value" />
 </div>
