--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
@@ -3,13 +3,14 @@
 	flex-direction: column;
 	gap: 0.125rem;
 	position: relative;
+	width: 100%;
 }
 
 .input-container {
 	display: flex;
 	align-items: center;
 	height: 3.063rem;
-	width: 21.125rem;
+	width: 100%;
 	border: 0.125rem solid var(--contrast-border-subtle);
 	border-radius: 0.625rem;
 	background-color: var(--contrast-surface-subtle);
