--- a/apps/client/src/app/pages/auth/register/register.component.css
+++ b/apps/client/src/app/pages/auth/register/register.component.css
@@ -4,6 +4,12 @@
 	justify-content: center;
 	align-items: center;
 	gap: 1.125rem;
+	width: 21.125rem;
+}
+
+section {
+	display: flex;
+	justify-content: center;
 }
 
 .header-container {
@@ -17,7 +23,52 @@
 	padding-top: 2rem;
 }
 
+.header-container div {
+	width: 21.125rem;
+}
+
 .input-container {
 	display: flex;
+	width: 100%;
 	flex-direction: column;
+	justify-content: start;
+	gap: 0.4rem;
+}
+
+.radio-button-group {
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+	gap: 2.5rem;
+	width: 100%;
+}
+
+label {
+	color: var(--primary-text-label);
+}
+
+.input-profile-pic-container {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	justify-content: center;
+	gap: 0.4rem;
+}
+
+.label-profile-pic {
+	color: #3953b2;
+}
+/*TODO: position avatar inside de input */
+.input-profile-pic {
+	width: var(--avatar-l);
+	height: var(--avatar-l);
+	border-radius: 100%;
+	background-color: rgb(107, 63, 148);
+}
+
+.avatar-container .icon {
+	color: var(--primary-icon-darker);
+	width: var(--icon-l);
+	height: var(--icon-l);
 }
