--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.css
@@ -10,7 +10,7 @@
 	display: flex;
 	align-items: center;
 	height: 3.063rem;
-	width: 100%;
+	width: 21.125rem;
 	border: 0.125rem solid var(--contrast-border-subtle);
 	border-radius: 0.625rem;
 	background-color: var(--contrast-surface-subtle);
