--- a/apps/client/src/app/pages/auth/register/register.component.html
+++ b/apps/client/src/app/pages/auth/register/register.component.html
@@ -10,10 +10,10 @@
 		/*TODO: change this and create a component*/
 		<div class="input-profile-pic-container">
 			<div class="avatar-container">
-				<input type="file" (change)="onImageUpload($event)" id="profilePic"
-					accept="image/png,image/jpg,image/jpeg" class="input-profile-pic" />
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" color="#000000"
-					fill="none" class="icon">
+				<input type="file" (change)="onImageUpload($event)" id="profilePic" accept="image/png,image/jpg,image/jpeg"
+					class="input-profile-pic" />
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" color="#000000" fill="none"
+					class="icon">
 					<path
 						d="M6.57757 15.4816C5.1628 16.324 1.45336 18.0441 3.71266 20.1966C4.81631 21.248 6.04549 22 7.59087 22H16.4091C17.9545 22 19.1837 21.248 20.2873 20.1966C22.5466 18.0441 18.8372 16.324 17.4224 15.4816C14.1048 13.5061 9.89519 13.5061 6.57757 15.4816Z"
 						stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -25,44 +25,31 @@
 			<label for="profilePic" class="label-medium label-profile-pic">Subir foto de perfil</label>
 		</div>
 
-		<div class="input-container">
-			<text-input inputId="name" label="Nombre" placeholder="Ingrese el nombre"
-				[control]="registerFormGroup.controls.firstName" />
-		</div>
+		<text-input inputId="name" label="Nombre" placeholder="Ingrese el nombre"
+			[control]="registerFormGroup.controls.firstName" />
 
-		<div class="input-container">
-			<text-input inputId="lastName" label="Apellido" placeholder="Ingrese el apellido"
-				[control]="registerFormGroup.controls.lastName" />
-		</div>
+		<text-input inputId="lastName" label="Apellido" placeholder="Ingrese el apellido"
+			[control]="registerFormGroup.controls.lastName" />
 
 
-		<div class="input-container">
-			<label for="gender" class="label-medium">Sexo</label>
+		<div class="gender-input-container">
+			<label for="gender" class="label-medium gender-label">Sexo</label>
 			<div class="radio-button-group">
-				<radio-button inputId="gender" [control]="registerFormGroup.controls.gender" value="female"
-					label="Femenino" />
-				<radio-button inputId="gender" [control]="registerFormGroup.controls.gender" value="male"
-					label="Masculino" />
+				<radio-button inputId="gender" [control]="registerFormGroup.controls.gender" value="female" label="Femenino" />
+				<radio-button inputId="gender" [control]="registerFormGroup.controls.gender" value="male" label="Masculino" />
 			</div>
 		</div>
 
-		<div class="input-container">
-			<text-input inputId="email" label="Correo Electrónico" placeholder="Ingrese el correo electrónico"
-				[control]="registerFormGroup.controls.email" />
-		</div>
+		<text-input inputId="email" label="Correo Electrónico" placeholder="Ingrese el correo electrónico"
+			[control]="registerFormGroup.controls.email" />
 
-		<div class="input-container">
-			<password-input inputId="password" label="Contraseña" placeholder="Ingrese la contraseña"
-				[control]="registerFormGroup.controls.password" />
-		</div>
-		<div class="input-container">
-			<password-input inputId="confirmPassword" label="Confirmar contraseña"
-				placeholder="Ingrese la contraseña nuevamente" [control]="registerFormGroup.controls.confirmPassword" />
-		</div>
+		<password-input inputId="password" label="Contraseña" placeholder="Ingrese la contraseña"
+			[control]="registerFormGroup.controls.password" />
 
-		<div class="input-container">
-			<text-input inputId="type" label="Tipo" [control]="registerFormGroup.controls.type" />
-		</div>
+		<password-input inputId="confirmPassword" label="Confirmar contraseña"
+			placeholder="Ingrese la contraseña nuevamente" [control]="registerFormGroup.controls.confirmPassword" />
+
+		<text-input inputId="type" label="Tipo" [control]="registerFormGroup.controls.type" />
 
 		<button mButton severity="secondary" [disabled]="registerFormGroup.invalid" size="large">Registrarme</button>
 
