--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
@@ -1,27 +1,25 @@
 <div class="container">
 	<label [for]="inputId" class="label-medium">{{label}}</label>
 	<div class="input-container" [class.error]="isInvalid">
-		<input [type]="showPassword ? 'text' : 'password'" [id]="inputId" [placeholder]="placeholder"
+		<input #input [type]="showPassword ? 'text' : 'password'" [id]="inputId" [placeholder]="placeholder"
 			[formControl]="control" />
 		<div (click)="handlePasswordVisibility()" style="cursor: pointer;">
 
 			@if(showPassword){
-			<svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24" width="36" height="36"
-				color="#000000" fill="none">
-				<path d="M22 8C22 8 18 14 12 14C6 14 2 8 2 8" stroke="currentColor" stroke-width="1.5"
-					stroke-linecap="round" />
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24" width="36" height="36" color="#000000"
+				fill="none">
+				<path d="M22 8C22 8 18 14 12 14C6 14 2 8 2 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
 				<path d="M15 13.5L16.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
 					stroke-linejoin="round" />
 				<path d="M20 11L22 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
 					stroke-linejoin="round" />
-				<path d="M2 13L4 11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
+				<path d="M2 13L4 11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
 				<path d="M9 13.5L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
 					stroke-linejoin="round" />
 			</svg>
 			}@else{
-			<svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24" width="36" height="36"
-				color="#000000" fill="none">
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24" width="36" height="36" color="#000000"
+				fill="none">
 				<path
 					d="M21.544 11.045C21.848 11.4713 22 11.6845 22 12C22 12.3155 21.848 12.5287 21.544 12.955C20.1779 14.8706 16.6892 19 12 19C7.31078 19 3.8221 14.8706 2.45604 12.955C2.15201 12.5287 2 12.3155 2 12C2 11.6845 2.15201 11.4713 2.45604 11.045C3.8221 9.12944 7.31078 5 12 5C16.6892 5 20.1779 9.12944 21.544 11.045Z"
 					stroke="currentColor" stroke-width="1.5" />
