--- a/apps/client/src/app/pages/auth/email-verification/email-verification.component.html
+++ b/apps/client/src/app/pages/auth/email-verification/email-verification.component.html
@@ -1,9 +1,11 @@
-<brand-logo size="small" [style.margin-top]="'3.875rem'" />
+<page-layout>
+	<brand-logo size="small" [style.margin-top]="'3.875rem'" />
 
-<h1 class="heading-xsmall" [style.margin-top]="'4.5rem'">Verificación de correo electrónico</h1>
+	<h1 class="heading-xsmall" [style.margin-top]="'4.5rem'">Verificación de correo electrónico</h1>
 
-<text-input inputId="email" [control]="emailControl" label="Correo electrónico" placeholder="ajrosas.21@est.ucab.edu.ve"
-	[style.margin-top]="'2.0625rem'" />
+	<text-input inputId="email" [control]="emailControl" label="Correo electrónico"
+		placeholder="ajrosas.21@est.ucab.edu.ve" [style.margin-top]="'2.0625rem'" />
 
-<button mButton (click)="handleSubmit()" size="large" [disabled]="!emailControl.valid"
-	[style.margin-top]="'4.125rem'">Enviar</button>
+	<button mButton (click)="handleSubmit()" size="large" [disabled]="!emailControl.valid"
+		[style.margin-top]="'4.125rem'">Enviar</button>
+</page-layout>
