--- a/apps/client/src/app/pages/auth/login/login.component.css
+++ b/apps/client/src/app/pages/auth/login/login.component.css
@@ -1,12 +1,3 @@
-:host {
-	/* display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center; */
-	height: 100dvh;
-	/* background-color: var(--contrast-color); */
-}
-
 .container {
 	display: flex;
 	flex-direction: column;
@@ -17,4 +8,8 @@
 .horizontal-center {
 	display: flex;
 	justify-content: center;
+}
+
+form {
+	gap: 1rem;
 }
