--- a/apps/client/src/app/pages/auth/successful-email-verification/successful-email-verification.component.css
+++ b/apps/client/src/app/pages/auth/successful-email-verification/successful-email-verification.component.css
@@ -4,4 +4,12 @@
 	justify-content: start;
 	align-items: center;
 	height: 100dvh;
+	max-width: 24.375rem;
+	margin: 0 auto;
+	padding: 0 1rem;
+}
+
+p {
+	margin-top: 3.5rem;
+	text-align: center;
 }
